--- a/styles/main.scss
+++ b/styles/main.scss
@@ -71,8 +71,29 @@ nav a{
     color: $color3;
     list-style: none;
     
+}
+.mainmenu li { 
+    display: none; 
+    
+}
+
+.mainmenu.responsive { 
+    position: relative;
 
 }
+
+.mainmenu.responsive li { 
+    background-color: black;
+    display: block;	
+    width: 100%; 
+  
+
+}
+.mainmenu.responsive li a {	
+    text-align: left;	
+    display: block;   
+}
+
 
 
 nav a:hover{
