--- a/styles/main.scss
+++ b/styles/main.scss
@@ -76,22 +76,25 @@ nav a{
     display: none; 
     
 }
-
+.mainmenu div{
+    width: 35px;
+  height: 5px;
+  background-color: $color1;
+  margin: 6px 0;
+}
 .mainmenu.responsive { 
-    position: relative;
+    position: absolute;
 
 }
 
 .mainmenu.responsive li { 
-    background-color: black;
     display: block;	
     width: 100%; 
   
 
 }
 .mainmenu.responsive li a {	
-    text-align: left;	
-    display: block;   
+    text-align: left;	 
 }
 
 
