--- a/styles/main.css
+++ b/styles/main.css
@@ -41,6 +41,16 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
 h1.header {
@@ -66,6 +76,10 @@ nav a {
   height: 5px;
   background-color: #899a7b;
   margin: 6px 0;
+}
+
+.mainmenu.responsive div {
+  display: none;
 }
 
 .mainmenu.responsive {
