--- a/styles/main.scss
+++ b/styles/main.scss
@@ -57,7 +57,11 @@ header a{
 }
 header{
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
 }
+
 h1.header {
     font-size: 3em;
 }
@@ -82,6 +86,11 @@ nav a{
   background-color: $color1;
   margin: 6px 0;
 }
+
+.mainmenu.responsive div{
+    display: none;
+}
+
 .mainmenu.responsive { 
     position: absolute;
 
