--- a/styles/main.css
+++ b/styles/main.css
@@ -75,7 +75,7 @@ nav a {
   width: 35px;
   height: 5px;
   background-color: #829b7a;
-  margin: 6px 0;
+  margin-top: 10px;
 }
 
 .mainmenu.responsive div {
