--- a/styles/main.scss
+++ b/styles/main.scss
@@ -11,9 +11,6 @@ $color3: rgb(200, 200, 170);
 
 
 
-
-
-
 /*Mobile Version*/
 
 * {
@@ -84,7 +81,7 @@ nav a{
     width: 35px;
   height: 5px;
   background-color: $color1;
-  margin: 6px 0;
+  margin-top: 10px;
 }
 
 .mainmenu.responsive div{
