--- a/styles/main.css
+++ b/styles/main.css
@@ -93,7 +93,7 @@ nav a {
 .mainmenu.responsive li {
   display: block;
   width: 100%;
-  size: 7em;
+  font-size: 7em;
 }
 
 .mainmenu.responsive li a {
