--- a/styles/small.css
+++ b/styles/small.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 600px) {
+/* @media only screen and (max-width: 600px) {
 
     
     header{
@@ -58,4 +58,4 @@
     main p{
         font-size: 110%;
     }
-}
+} */
