--- a/styles/main.scss
+++ b/styles/main.scss
@@ -85,7 +85,7 @@ nav a{
     width: 35px;
     height: 5px;
     background-color: $color1;
-    margin-top: 8px;
+    margin: 4px;
 }
 
 .mainmenu.responsive div{
@@ -95,7 +95,7 @@ nav a{
 .mainmenu.responsive li { 
     display: block;	
     width: 100%; 
-    font-size: 7em;
+    font-size: 2em;
   
 
 }
