--- a/styles/main.scss
+++ b/styles/main.scss
@@ -56,7 +56,7 @@ header{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
 }
 
 h1 {
