--- a/styles/main.scss
+++ b/styles/main.scss
@@ -84,7 +84,7 @@ nav a{
     width: 35px;
     height: 5px;
     background-color: $color1;
-    padding: 3px
+    padding: 3px;
 }
 
 .mainmenu.responsive div{
