--- a/styles/main.css
+++ b/styles/main.css
@@ -117,7 +117,7 @@ footer {
 footer .socialmedia img {
   width: 35px;
   padding: .4%;
-  color: #a0b297;
+  background-color: #a0b297;
 }
 
 /*Desktop Version*/
