--- a/styles/main.scss
+++ b/styles/main.scss
@@ -129,7 +129,7 @@ footer{
 footer .socialmedia img{
     width: 35px;
     padding: .4%;
-    color: $color2;
+    background-color: $color2;
 }
 
 
