--- a/styles/main.scss
+++ b/styles/main.scss
@@ -136,5 +136,13 @@ footer .socialmedia img{
 
 /*Desktop Version*/
 
+@media only screen and (min-width: 50em) {
+
+    footer .socialmedia img{
+        width: 7%;
+
+    }
 
 
+
+}
