--- a/styles/main.scss
+++ b/styles/main.scss
@@ -138,6 +138,14 @@ footer .socialmedia img{
 
 @media only screen and (min-width: 50em) {
 
+    header {
+        flex-direction: column;
+    }
+
+    .mainmenu li{
+        display: contents;
+    }
+
     footer .socialmedia img{
         width: 3%;
 
