--- a/styles/main.css
+++ b/styles/main.css
@@ -122,6 +122,15 @@ footer .socialmedia img {
 
 /*Desktop Version*/
 @media only screen and (min-width: 50em) {
+  header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .mainmenu li {
+    display: contents;
+  }
   footer .socialmedia img {
     width: 3%;
   }
