--- a/styles/main.scss
+++ b/styles/main.scss
@@ -146,6 +146,10 @@ footer .socialmedia img{
         display: contents;
     }
 
+    .mainmenu button{
+        display: none;
+    }
+
     footer .socialmedia img{
         width: 3%;
 
