--- a/styles/main.scss
+++ b/styles/main.scss
@@ -139,6 +139,23 @@ footer .socialmedia img{
 @media only screen and (min-width: 50em) {
 
    
+    h1.header {
+   
+    font-size: 300%;
+    letter-spacing: 5pt;
+    text-transform: none;
+    padding-bottom: 0px;
+    text-transform: uppercase;
+
+    }
+
+    h1{
+        font-size: 1300%;
+        font-weight: 900;
+    
+    
+    
+    }
 
     .mainmenu li{
         display: contents;
