--- a/styles/main.css
+++ b/styles/main.css
@@ -122,6 +122,17 @@ footer .socialmedia img {
 
 /*Desktop Version*/
 @media only screen and (min-width: 50em) {
+  h1.header {
+    font-size: 300%;
+    letter-spacing: 5pt;
+    text-transform: none;
+    padding-bottom: 0px;
+    text-transform: uppercase;
+  }
+  h1 {
+    font-size: 1300%;
+    font-weight: 900;
+  }
   .mainmenu li {
     display: contents;
   }
