--- a/styles/main.scss
+++ b/styles/main.scss
@@ -70,6 +70,17 @@ strong{
     color: $color2;
 }
 
+
+nav ul li {
+    text-transform: uppercase;
+    letter-spacing: 2pt;
+    font-size: 130%;
+    display: inline;
+    word-spacing: 20pt;
+    
+
+}
+
 nav a{  
     text-decoration: none;
     color: $color3;
@@ -159,6 +170,10 @@ footer .socialmedia img{
 
     .mainmenu li{
         display: contents;
+    }
+
+    nav a{
+
     }
 
     .mainmenu button{
