--- a/styles/main.css
+++ b/styles/main.css
@@ -152,6 +152,8 @@ footer .socialmedia img {
   }
   main {
     max-width: 80%;
+    padding-left: 10%;
+    padding-right: 10%;
   }
 }
 /*# sourceMappingURL=main.css.map */
