--- a/styles/main.scss
+++ b/styles/main.scss
@@ -187,6 +187,8 @@ footer .socialmedia img{
 
     main{
         max-width: 80%;
+        padding-left: 10%;
+        padding-right: 10%;
     }
 
 
