--- a/styles/main.css
+++ b/styles/main.css
@@ -134,6 +134,18 @@ footer .socialmedia img {
     -ms-flex-pack: distribute;
         justify-content: space-around;
   }
+  nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    padding-bottom: 0px;
+    z-index: 99;
+  }
   h1.header {
     font-size: 300%;
     letter-spacing: 5pt;
