--- a/styles/main.css
+++ b/styles/main.css
@@ -135,7 +135,7 @@ footer .socialmedia img {
         -ms-flex-pack: justify;
             justify-content: space-between;
   }
-  nav {
+  ul {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -146,13 +146,6 @@ footer .socialmedia img {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-  }
-  .sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    padding-bottom: 0px;
-    z-index: 99;
   }
   h1.header {
     font-size: 300%;
