--- a/styles/main.scss
+++ b/styles/main.scss
@@ -153,21 +153,21 @@ footer .socialmedia img{
         justify-content: space-between;
     }
 
-    nav{
+    ul{
         display: flex;
         flex-direction: row;
         justify-content: space-between;
     }
 
-    .sticky {
-        position: fixed;
-        top: 0;
-        width: 100%;
-        padding-bottom: 0px;
-        z-index: 99;
+    // .sticky {
+    //     position: fixed;
+    //     top: 0;
+    //     width: 100%;
+    //     padding-bottom: 0px;
+    //     z-index: 99;
     
     
-    }
+    // }
 
    
     h1.header {
