--- a/styles/main.css
+++ b/styles/main.css
@@ -11,6 +11,7 @@ img {
 
 html {
   height: 100%;
+  width: 100%;
 }
 
 body {
@@ -169,8 +170,8 @@ footer .socialmedia img {
   }
   .container {
     max-width: 80%;
-    padding-left: 10%;
-    padding-right: 10%;
+    margin-left: 10%;
+    margin-right: 10%;
   }
 }
 /*# sourceMappingURL=main.css.map */
