--- a/styles/main.scss
+++ b/styles/main.scss
@@ -24,6 +24,7 @@ img{
 
 html{
     height: 100%;
+    width: 100%;
 }
 
 body{
@@ -203,8 +204,8 @@ footer .socialmedia img{
 
     .container{
         max-width: 80%;
-        padding-left: 10%;
-        padding-right: 10%;
+        margin-left: 10%;
+        margin-right: 10%;
     }
 
 
