--- a/styles/main.scss
+++ b/styles/main.scss
@@ -151,14 +151,14 @@ footer .socialmedia img{
 @media only screen and (min-width: 50em) {
 
     header{
-        justify-content: space-around;
-    }
-
-    nav ul{
-        display: flex;
-        flex-direction: row;
         justify-content: space-between;
     }
+
+    // nav ul{
+    //     display: flex;
+    //     flex-direction: row;
+    //     justify-content: space-between;
+    // }
 
     // .sticky {
     //     position: fixed;
