--- a/styles/main.css
+++ b/styles/main.css
@@ -142,6 +142,14 @@ footer .socialmedia img {
     text-transform: none;
     padding-bottom: 0px;
     text-transform: uppercase;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
+  nav {
+    -webkit-box-flex: 2;
+        -ms-flex-positive: 2;
+            flex-grow: 2;
   }
   h1 {
     font-size: 1300%;
