--- a/styles/main.scss
+++ b/styles/main.scss
@@ -178,7 +178,12 @@ footer .socialmedia img{
     text-transform: none;
     padding-bottom: 0px;
     text-transform: uppercase;
+    flex-grow: 1;
 
+    }
+
+    nav{
+        flex-grow: 2;
     }
 
     h1{
