--- a/styles/main.css
+++ b/styles/main.css
@@ -156,6 +156,10 @@ footer .socialmedia img {
   .mainmenu button {
     display: none;
   }
+  .portfolio {
+    padding-left: 10%;
+    padding-right: 10%;
+  }
   footer .socialmedia img {
     width: 3%;
   }
