--- a/styles/main.scss
+++ b/styles/main.scss
@@ -204,6 +204,11 @@ footer .socialmedia img{
         display: none;
     }
 
+    .portfolio{
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+
     footer .socialmedia img{
         width: 3%;
 
