--- a/styles/main.css
+++ b/styles/main.css
@@ -63,6 +63,11 @@ strong {
   color: #a0b297;
 }
 
+h2 {
+  font-size: 40%;
+  color: #a0b297;
+}
+
 nav a {
   text-decoration: none;
   color: #4d785f;
@@ -149,6 +154,9 @@ footer .socialmedia img {
   h1 {
     font-size: 1300%;
     font-weight: 900;
+  }
+  h2 {
+    font-size: 200%;
   }
   .mainmenu li {
     display: contents;
