--- a/styles/main.scss
+++ b/styles/main.scss
@@ -200,6 +200,11 @@ footer .socialmedia img{
         font-size: 200%;
     }
 
+    p{
+        line-height: 2em;
+        font-size: 18pt;
+    }
+
     .mainmenu li{
         display: contents;
     }
