--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,6 +7,7 @@ $body-background-color: white;
 $color1: rgb(130, 155, 122);
 $color2: rgb(160, 178, 151);
 $color3: rgb(77, 120, 95); 
+$color4: black;
 
 
 
@@ -72,11 +73,13 @@ strong{
 }
 h2{
     font-size: 40%;
-    color: $color2;
+    color: $color3;
+    text-transform: uppercase;
 }
 
 h3{
-    color: $color1;
+    color: $color4;
+
 }
 
 nav a{  
@@ -206,7 +209,6 @@ footer .socialmedia img{
 
     h3 {
         font-size: 200%;
-        font-weight: 100;
 
     }
 
