--- a/styles/main.css
+++ b/styles/main.css
@@ -67,6 +67,7 @@ h2 {
   font-size: 2em;
   color: #4d785f;
   text-transform: uppercase;
+  letter-spacing: 1.5em;
 }
 
 h3 {
@@ -193,7 +194,7 @@ footer .socialmedia img {
     display: flex;
   }
   .bio p {
-    padding-left: 10%;
+    padding-left: 5%;
   }
 }
 /*# sourceMappingURL=main.css.map */
