--- a/styles/main.scss
+++ b/styles/main.scss
@@ -75,6 +75,7 @@ h2{
     font-size: 2em;
     color: $color3;
     text-transform: uppercase;
+    letter-spacing: 1.5em;
 }
 
 h3{
@@ -245,7 +246,7 @@ footer .socialmedia img{
     }
 
     .bio p {
-        padding-left: 10%;
+        padding-left: 5%;
     }
 
 
