--- a/styles/main.css
+++ b/styles/main.css
@@ -67,7 +67,7 @@ h2 {
   font-size: 2em;
   color: #4d785f;
   text-transform: uppercase;
-  letter-spacing: 1.5em;
+  letter-spacing: .3em;
 }
 
 h3 {
