--- a/styles/main.scss
+++ b/styles/main.scss
@@ -75,7 +75,7 @@ h2{
     font-size: 2em;
     color: $color3;
     text-transform: uppercase;
-    letter-spacing: 1.5em;
+    letter-spacing: .3em;
 }
 
 h3{
