--- a/styles/main.css
+++ b/styles/main.css
@@ -184,6 +184,9 @@ footer .socialmedia img {
     margin-left: 15%;
     margin-right: 15%;
   }
+  .mypic {
+    width: 100%;
+  }
   .bio {
     display: -webkit-box;
     display: -ms-flexbox;
