--- a/styles/main.scss
+++ b/styles/main.scss
@@ -237,6 +237,10 @@ footer .socialmedia img{
         margin-right: 15%;
     }
 
+    .mypic{
+        width: 100%;
+    }
+
 
     .bio{
         display: flex;
