this darn picture

--- a/styles/main.css
+++ b/styles/main.css
@@ -185,7 +185,7 @@ footer .socialmedia img {
     margin-right: 15%;
   }
   .mypic {
-    width: 100%;
+    max-width: 100%;
   }
   .bio {
     display: -webkit-box;
