--- a/styles/main.css
+++ b/styles/main.css
@@ -192,6 +192,8 @@ footer .socialmedia img {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -ms-flex-line-pack: justify;
+        align-content: space-between;
   }
   .bio p {
     padding-left: 5%;
