--- a/styles/main.scss
+++ b/styles/main.scss
@@ -239,13 +239,12 @@ footer .socialmedia img{
     }
 
     .mypic{
-        max-width: 30%;
+        width: 30%;
     }
 
 
     .bio{
         display: flex;
-        align-content: space-between;
     }
 
     .bio p {
