--- a/styles/main.css
+++ b/styles/main.css
@@ -186,14 +186,12 @@ footer .socialmedia img {
     margin-right: 15%;
   }
   .mypic {
-    max-width: 30%;
+    width: 30%;
   }
   .bio {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-line-pack: justify;
-        align-content: space-between;
   }
   .bio p {
     padding-left: 5%;
