--- a/styles/main.css
+++ b/styles/main.css
@@ -189,9 +189,7 @@ footer .socialmedia img {
     width: 30%;
   }
   .bio {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    display: inline;
   }
   .bio p {
     padding-left: 5%;
