ok ok we will do flex

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -244,7 +244,8 @@ footer .socialmedia img{
 
 
     .bio{
-        display: inline;
+        display: flex;
+        justify-content: center;
     }
 
     .bio p {
