--- a/styles/main.css
+++ b/styles/main.css
@@ -189,7 +189,12 @@ footer .socialmedia img {
     width: 30%;
   }
   .bio {
-    display: inline;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .bio p {
     padding-left: 5%;
