mobile rolling eeyes

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -72,8 +72,9 @@ h1.header {
 strong{
     color: $color2;
 }
-h2{
 
+h2{
+    font-size: 10%;
     color: $color3;
     text-transform: uppercase;
     letter-spacing: .1em;
