--- a/styles/main.css
+++ b/styles/main.css
@@ -31,6 +31,9 @@ body {
   position: relative;
   padding-bottom: 120px;
   background-color: white;
+  max-width: 90%;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 header a {
