--- a/styles/main.css
+++ b/styles/main.css
@@ -209,6 +209,7 @@ footer .socialmedia img {
   .portfoliogrid {
     display: -ms-grid;
     display: grid;
+    grid-column-gap: 50px 50px 50px;
   }
 }
 /*# sourceMappingURL=main.css.map */
