--- a/styles/main.css
+++ b/styles/main.css
@@ -209,6 +209,8 @@ footer .socialmedia img {
   .portfoliogrid {
     display: -ms-grid;
     display: grid;
+    -ms-grid-columns: auto auto auto;
+        grid-template-columns: auto auto auto;
     grid-column-gap: 50px 50px 50px;
   }
 }
