--- a/styles/main.css
+++ b/styles/main.css
@@ -211,6 +211,8 @@ footer .socialmedia img {
     display: grid;
     -ms-grid-columns: auto auto auto;
         grid-template-columns: auto auto auto;
+    -ms-grid-rows: auto auto auto;
+        grid-template-rows: auto auto auto;
     grid-column-gap: 25px;
   }
 }
