--- a/styles/main.scss
+++ b/styles/main.scss
@@ -259,6 +259,7 @@ footer .socialmedia img{
     .portfoliogrid {
         display: grid;
         grid-template-columns: auto auto auto;
+        grid-template-rows: auto auto auto;
         grid-column-gap: 25px;
     }
 
