--- a/styles/main.scss
+++ b/styles/main.scss
@@ -261,6 +261,7 @@ footer .socialmedia img{
         grid-template-columns: auto auto auto;
         grid-template-rows: auto auto auto;
         grid-column-gap: 25px;
+        grid-row-gap: 25px;
     }
 
 
