--- a/styles/main.scss
+++ b/styles/main.scss
@@ -247,6 +247,10 @@ footer .socialmedia img{
         align-self: center;
     }
 
+    .portfolio img{
+        width: 100%;
+    }
+
 
     .bio{
         display: flex;
