--- a/styles/main.scss
+++ b/styles/main.scss
@@ -145,9 +145,6 @@ h4{
     font-size: 1.5em;
 }
 
-resume{
-    margin: 20%;
-}
 
 
 footer{
@@ -280,6 +277,11 @@ footer .socialmedia img{
         grid-column-gap: 25px;
         grid-row-gap: 25px;
     }
+
+
+.resume{
+    margin: 20%;
+}
 
 
 
