--- a/styles/main.css
+++ b/styles/main.css
@@ -134,10 +134,6 @@ h4 {
   font-size: 1.5em;
 }
 
-resume {
-  margin: 20%;
-}
-
 footer {
   height: 90px;
   width: 100%;
@@ -232,6 +228,9 @@ footer .socialmedia img {
         grid-template-rows: auto auto auto;
     grid-column-gap: 25px;
     grid-row-gap: 25px;
+  }
+  .resume {
+    margin: 20%;
   }
 }
 /*# sourceMappingURL=main.css.map */
