--- a/styles/main.scss
+++ b/styles/main.scss
@@ -284,6 +284,26 @@ footer .socialmedia img{
     font-size: 20%;
 }
 
+.resume{
+    h2 {
+        font-size: 200%;
+    }
+
+    h3 {
+        font-size: 100%;
+
+    }
+    h4{
+        font-size: 90%;
+
+    }
+
+    p{
+        line-height: 1.8em;
+        font-size: 16pt;
+    }
+}
+
 
 
 }
