--- a/styles/main.scss
+++ b/styles/main.scss
@@ -286,15 +286,15 @@ footer .socialmedia img{
 
 .resume{
     h2 {
-        font-size: 200%;
+        font-size: 20pt;
     }
 
     h3 {
-        font-size: 100%;
+        font-size: 20pt;
 
     }
     h4{
-        font-size: 90%;
+        font-size: 18pt;
 
     }
 
