--- a/styles/main.css
+++ b/styles/main.css
@@ -234,13 +234,13 @@ footer .socialmedia img {
     font-size: 20%;
   }
   .resume h2 {
-    font-size: 200%;
+    font-size: 20pt;
   }
   .resume h3 {
-    font-size: 100%;
+    font-size: 20pt;
   }
   .resume h4 {
-    font-size: 90%;
+    font-size: 18pt;
   }
   .resume p {
     line-height: 1.8em;
