--- a/styles/main.css
+++ b/styles/main.css
@@ -246,5 +246,10 @@ footer .socialmedia img {
     line-height: 1.8em;
     font-size: 16pt;
   }
+  div {
+    width: 10%;
+    height: 10%;
+    color: red;
+  }
 }
 /*# sourceMappingURL=main.css.map */
