--- a/styles/main.scss
+++ b/styles/main.scss
@@ -305,8 +305,8 @@ footer .socialmedia img{
 }
 
 div{
-    width: 10%;
-    height: 10%;
+    width: 10em;
+    height: 10em;
     color: red;
 }
 
