--- a/styles/main.css
+++ b/styles/main.css
@@ -247,9 +247,9 @@ footer .socialmedia img {
     font-size: 16pt;
   }
   div {
-    width: 10em;
-    height: 10em;
-    color: red;
+    width: 2fr;
+    height: 1fr;
+    background-color: red;
   }
 }
 /*# sourceMappingURL=main.css.map */
