--- a/styles/main.scss
+++ b/styles/main.scss
@@ -305,9 +305,9 @@ footer .socialmedia img{
 }
 
 div{
-    width: 10em;
-    height: 10em;
-    color: red;
+    width: 2fr;
+    height: 1fr;
+    background-color: red;
 }
 
 
