--- a/styles/main.css
+++ b/styles/main.css
@@ -246,7 +246,15 @@ footer .socialmedia img {
     line-height: 1.8em;
     font-size: 16pt;
   }
-  div {
+  .homegrid {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 3;
+        grid-template-columns: 3;
+    -ms-grid-rows: 6;
+        grid-template-rows: 6;
+  }
+  .homegrid div {
     width: 2fr;
     height: 1fr;
     background-color: red;
