--- a/styles/main.scss
+++ b/styles/main.scss
@@ -303,12 +303,12 @@ footer .socialmedia img{
         font-size: 16pt;
     }
 }
-.homegrid {
+.home-grid {
     display: grid;
     grid-template-columns: 3;
     grid-template-rows: 6;
 }
-.homegrid div{
+.home-grid div{
     width: 2fr;
     height: 1fr;
     background-color: red;
