--- a/styles/main.css
+++ b/styles/main.css
@@ -247,10 +247,10 @@ footer .socialmedia img {
   .home-grid {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 3;
-        grid-template-columns: 3;
-    -ms-grid-rows: 6;
-        grid-template-rows: 6;
+    -ms-grid-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
   }
   .home-grid div {
     width: 2fr;
