--- a/styles/main.scss
+++ b/styles/main.scss
@@ -304,7 +304,7 @@ footer .socialmedia img{
 .home-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 40em 40em 40em 40em 40em 40em;
 }
 .home-grid div{
     width: 2fr;
