--- a/styles/main.scss
+++ b/styles/main.scss
@@ -212,8 +212,9 @@ footer .socialmedia img{
     }
 
     h1{
-        font-size: 1300%;
+        font-size: 1100%;
         font-weight: 900;
+        padding: none;
     }
 
     h2 {
