--- a/styles/main.css
+++ b/styles/main.css
@@ -170,8 +170,9 @@ footer .socialmedia img {
     word-spacing: 20pt;
   }
   h1 {
-    font-size: 1300%;
+    font-size: 1100%;
     font-weight: 900;
+    padding: none;
   }
   h2 {
     font-size: 300%;
