--- a/styles/main.scss
+++ b/styles/main.scss
@@ -212,9 +212,9 @@ footer .socialmedia img{
     }
 
     h1{
-        font-size: 1100%;
+        font-size: 1000%;
         font-weight: 900;
-        padding: none;
+        padding: 0px;
     }
 
     h2 {
