--- a/styles/main.css
+++ b/styles/main.css
@@ -203,7 +203,7 @@ footer .socialmedia img {
   footer .socialmedia img {
     width: 3%;
   }
-  .container {
+  .home, .container {
     max-width: 70%;
     margin-left: 15%;
     margin-right: 15%;
