--- a/styles/main.scss
+++ b/styles/main.scss
@@ -251,8 +251,7 @@ footer .socialmedia img{
         width: 3%;
 
     }
-
-    .container{
+    .home, .container {
         max-width: 70%;
         margin-left: 15%;
         margin-right: 15%;
