--- a/styles/main.scss
+++ b/styles/main.scss
@@ -315,7 +315,7 @@ footer .socialmedia img{
     grid-template-rows: 30em 30em 30em 30em 30em 30em;
 }
 
-.home-grid img:hover {
+.home-grid:hover {
     transition: .4s;
     color: red;
 }
