--- a/styles/main.scss
+++ b/styles/main.scss
@@ -322,7 +322,7 @@ footer .socialmedia img{
 
 .home-grid img:nth-of-type(1) {
 grid-column-start: 1;
-grid-column-end: 2;
+grid-column-end: span 3;
 grid-row-start: 1;
 }
 
