--- a/styles/main.scss
+++ b/styles/main.scss
@@ -326,9 +326,10 @@ grid-column-end: span 2;
 grid-row-start: 1;
 }
 
-.home-grid img:nth-of-type(2) {
+.home-grid img:nth-of-type(5) {
     grid-column-start: 3;
-    grid-row-start: 1;
+    grid-row-start: 2;
+    grid-row-end: span 3;
     }
 
 
