--- a/styles/main.css
+++ b/styles/main.css
@@ -284,5 +284,13 @@ footer .socialmedia img {
     -ms-grid-row-span: 3;
         grid-row-end: span 3;
   }
+  .home-grid img:nth-of-type(6) {
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    -ms-grid-row: 3;
+        grid-row-start: 3;
+    -ms-grid-column-span: 2;
+        grid-column-end: span 2;
+  }
 }
 /*# sourceMappingURL=main.css.map */
