--- a/styles/main.scss
+++ b/styles/main.scss
@@ -332,6 +332,12 @@ grid-row-start: 1;
     grid-row-end: span 3;
     }
 
+    .home-grid img:nth-of-type(6) {
+        grid-column-start: 1;
+        grid-row-start: 3;
+        grid-column-end: span 2;
+        }
+
 
 
 }
