--- a/styles/main.css
+++ b/styles/main.css
@@ -292,5 +292,13 @@ footer .socialmedia img {
     -ms-grid-column-span: 2;
         grid-column-end: span 2;
   }
+  .home-grid img:nth-of-type(8) {
+    -ms-grid-column: 2;
+        grid-column-start: 2;
+    -ms-grid-row: 4;
+        grid-row-start: 4;
+    -ms-grid-column-span: 3;
+        grid-column-end: span 3;
+  }
 }
 /*# sourceMappingURL=main.css.map */
