--- a/styles/main.scss
+++ b/styles/main.scss
@@ -337,7 +337,11 @@ grid-row-start: 1;
         grid-row-start: 3;
         grid-column-end: span 2;
         }
-
+   .home-grid img:nth-of-type(8) {
+      grid-column-start: 2;
+     grid-row-start: 4;
+    grid-column-end: span 3;
+            }
 
 
 }
