--- a/styles/main.css
+++ b/styles/main.css
@@ -300,5 +300,21 @@ footer .socialmedia img {
     -ms-grid-column-span: 2;
         grid-column-end: span 2;
   }
+  .home-grid img:nth-of-type(9) {
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    -ms-grid-row: 5;
+        grid-row-start: 5;
+    -ms-grid-row-span: 2;
+        grid-row-end: span 2;
+  }
+  .home-grid img:nth-of-type(12) {
+    -ms-grid-column: 2;
+        grid-column-start: 2;
+    -ms-grid-row: 6;
+        grid-row-start: 6;
+    -ms-grid-column-span: 2;
+        grid-column-end: span 2;
+  }
 }
 /*# sourceMappingURL=main.css.map */
