--- a/styles/main.scss
+++ b/styles/main.scss
@@ -343,5 +343,16 @@ grid-row-start: 1;
     grid-column-end: span 2;
             }
 
+    .home-grid img:nth-of-type(9) {
+        grid-column-start: 1;
+       grid-row-start: 5;
+      grid-row-end: span 2;
+                 }
+    .home-grid img:nth-of-type(12) {
+       grid-column-start: 2;
+      grid-row-start: 6;
+     grid-column-end: span 2;
+                }     
+
 
 }
