--- a/styles/main.scss
+++ b/styles/main.scss
@@ -233,6 +233,13 @@ footer .socialmedia img{
         font-size: 200%;
 
     }
+    h4 {
+        font-size: 100%;
+        padding: 0px;
+        color: $color2;
+        text-transform: uppercase;
+        text-align: center;
+    }
 
     p{
         line-height: 2em;
