--- a/styles/main.css
+++ b/styles/main.css
@@ -190,6 +190,13 @@ footer .socialmedia img {
   h3 {
     font-size: 200%;
   }
+  h4 {
+    font-size: 100%;
+    padding: 0px;
+    color: #a0b297;
+    text-transform: uppercase;
+    text-align: center;
+  }
   p {
     line-height: 2em;
     font-size: 18pt;
