--- a/styles/main.css
+++ b/styles/main.css
@@ -183,6 +183,7 @@ footer .socialmedia img {
     font-size: 1000%;
     font-weight: 900;
     padding: 0px;
+    margin: 0px;
   }
   h2 {
     font-size: 300%;
@@ -191,8 +192,7 @@ footer .socialmedia img {
     font-size: 200%;
   }
   h4 {
-    font-size: 100%;
-    padding: 0px;
+    font-size: 200%;
     color: #a0b297;
     text-transform: uppercase;
     text-align: center;
