--- a/styles/main.scss
+++ b/styles/main.scss
@@ -223,6 +223,7 @@ footer .socialmedia img{
         font-size: 1000%;
         font-weight: 900;
         padding: 0px;
+        margin: 0px;
     }
 
     h2 {
@@ -234,8 +235,7 @@ footer .socialmedia img{
 
     }
     h4 {
-        font-size: 100%;
-        padding: 0px;
+        font-size: 200%;
         color: $color2;
         text-transform: uppercase;
         text-align: center;
