--- a/styles/main.scss
+++ b/styles/main.scss
@@ -223,7 +223,7 @@ footer .socialmedia img{
         font-size: 1000%;
         font-weight: 900;
         padding: 0px;
-        margin: 0px;
+        margin: 2em 0%;
     }
 
     h2 {
