--- a/styles/main.scss
+++ b/styles/main.scss
@@ -222,6 +222,7 @@ footer .socialmedia img{
     h1{
         font-size: 1000%;
         font-weight: 900;
+        margin-bottom: 0;
   
     }
 
@@ -238,6 +239,7 @@ footer .socialmedia img{
         color: $color2;
         text-transform: uppercase;
         text-align: center;
+        margin-bottom: 1em;
     }
 
     p{
