--- a/styles/main.css
+++ b/styles/main.css
@@ -182,6 +182,7 @@ footer .socialmedia img {
   h1 {
     font-size: 1000%;
     font-weight: 900;
+    margin-bottom: 0;
   }
   h2 {
     font-size: 300%;
@@ -194,6 +195,7 @@ footer .socialmedia img {
     color: #a0b297;
     text-transform: uppercase;
     text-align: center;
+    margin-bottom: 1em;
   }
   p {
     line-height: 2em;
