--- a/styles/main.scss
+++ b/styles/main.scss
@@ -325,7 +325,7 @@ footer .socialmedia img{
 
 .home-grid a:hover {
     transition: .4s;
-    color: red;
+    background-color: red;
 }
 
 .home-grid a:nth-of-type(1) {
