--- a/styles/main.scss
+++ b/styles/main.scss
@@ -325,7 +325,7 @@ footer .socialmedia img{
 
 .home-grid a:hover {
     transition: .4s;
-    background-color: red;
+    opacity: .5;
 }
 
 .home-grid a:nth-of-type(1) {
