--- a/styles/main.css
+++ b/styles/main.css
@@ -142,6 +142,7 @@ p {
 .resume h4 {
   color: black;
   font-size: 1.5em;
+  text-align: left;
 }
 
 footer {
@@ -282,6 +283,8 @@ footer .socialmedia img {
         grid-column-end: span 2;
     -ms-grid-row: 1;
         grid-row-start: 1;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
   .home-grid a:nth-of-type(5) {
     -ms-grid-column: 3;
@@ -290,6 +293,8 @@ footer .socialmedia img {
         grid-row-start: 2;
     -ms-grid-row-span: 2;
         grid-row-end: span 2;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
   .home-grid a:nth-of-type(6) {
     -ms-grid-column: 1;
@@ -298,6 +303,8 @@ footer .socialmedia img {
         grid-row-start: 3;
     -ms-grid-column-span: 2;
         grid-column-end: span 2;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
   .home-grid a:nth-of-type(8) {
     -ms-grid-column: 2;
@@ -306,6 +313,8 @@ footer .socialmedia img {
         grid-row-start: 4;
     -ms-grid-column-span: 2;
         grid-column-end: span 2;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
   .home-grid a:nth-of-type(9) {
     -ms-grid-column: 1;
@@ -314,6 +323,8 @@ footer .socialmedia img {
         grid-row-start: 5;
     -ms-grid-row-span: 2;
         grid-row-end: span 2;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
   .home-grid a:nth-of-type(12) {
     -ms-grid-column: 2;
@@ -322,6 +333,8 @@ footer .socialmedia img {
         grid-row-start: 6;
     -ms-grid-column-span: 2;
         grid-column-end: span 2;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 }
 /*# sourceMappingURL=main.css.map */
